removes display: flex from div.game to stop player divs from stretching out

--- a/js/widgets/site/Lightsquare/_Play/_GamePage/game_page.css
+++ b/js/widgets/site/Lightsquare/_Play/_GamePage/game_page.css
@@ -1,6 +1,4 @@
 div.game {
-	display: flex;
-	flex-direction: column;
 	flex-grow: 1;
 }
 
